--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "firebase": "^11.0.2"
+    "firebase": "^11.0.2",
     "firebase-admin": "^11.0.0",
     "http": "*",
     "https": "*"
