--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "firebase": "^11.0.2",
     "firebase-admin": "^11.0.0",
     "http": "*",
-    "https": "*"
+    "https": "*",
+    "uuid": "*",
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
