--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "firebase-admin": "^11.0.0",
     "http": "*",
     "https": "*",
-    "uuid": "*",
+    "uuid": "*"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
